# cumulative_citations

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  README.md  citation_plan.md  pyproject.toml
.claude/: settings.local.json
.github/workflows/: ci.yml
data/: README.md
docs/: README.md  index.md
notebooks/: README.md
results/: README.md  david_denkenberger.csv  florian_jehn.csv  luke_kemp.csv
src/: README.md  cumulative_citations.py  example.py
style/: scientific.mplstyle
tests/: README.md  test_cumulative_citations.py  test_example.py
