[project]
name = "cumulative-citations"
version = "0.1.0"
description = "Plot cumulative yearly citations per paper for an OpenAlex author"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0",
    "numpy>=1.26",
    "matplotlib>=3.8",
    "requests>=2.31",
]

[dependency-groups]
dev = [
    "pytest>=7.4",
    "ruff>=0.9.0",
    "pre-commit>=3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I"]  # E/F: pyflakes/pycodestyle (flake8), I: isort
ignore = ["E203"]

[tool.hatch.build.targets.wheel]
packages = ["src"]
